# LumenMarket

./: README.md
bot/: bot.py  requirements.txt  watcher.py
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
web/: package.json  tailwind.config.js
web/app/: layout.tsx  page.tsx
web/app/create/: page.tsx
web/app/launch/[id]/: page.tsx
web/components/: BondingCurveChart.tsx  CreateWizard.tsx  TokenCard.tsx
web/lib/: contract.ts  types.ts
