[package]
name = "lumen-market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[profile.release-with-logs]
inherits = "release"
debug = true

[workspace]
